--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -7,6 +7,7 @@
     --cor-secondary: #DA6A2D;
     --cor-dark: #323232;
     --cor-light: #EBE6E0;
+    --cor-overlay: #EBE6E0;
     --cor-button-light: #EBE6E0;
     --cor-button-green: #2F4F4F;
     --cor-button-dark: #131313;
