--- a/src/assets/sass/pages/_home-page.scss
+++ b/src/assets/sass/pages/_home-page.scss
@@ -6,7 +6,7 @@
         transform: translate(-50%, -50%);
         z-index: 10;
         text-align: center;
-        color: var(--cor-light);
+        color: var(--cor-overlay);
         width: 100%;
     }
     &-images {
