--- a/src/components/NewAnimatedButton/NewAnimatedButton.scss
+++ b/src/components/NewAnimatedButton/NewAnimatedButton.scss
@@ -6,8 +6,8 @@
   padding: 0.5rem 2rem;
   font-family: "Gamilia", sans-serif;
   font-size: 1rem;
-  color: black;
-  border: 1px solid black;
+  color: var(--cor-primary);
+  border: 1px solid var(--cor-primary);
   border-radius: 50px;
   background-color: transparent;
   overflow: hidden;
@@ -38,7 +38,7 @@
     left: 50%;
     width: 0;
     height: 0;
-    background-color: black;
+    background-color: var(--cor-primary);
     border-radius: 50%;
     transform: translate(-50%, -50%);
     transition: width 0.4s ease-in-out, height 0.4s ease-in-out,
