--- a/src/assets/sass/base/_text.scss
+++ b/src/assets/sass/base/_text.scss
@@ -166,6 +166,9 @@ Ejemplo: <p class="b1 b1-md">Este texto ajustará su tamaño en pantallas median
   }
 }
 
+.font--dirty{
+  font-family: "Dirtyline";
+}
 .text {
 
   &-color {
