--- a/src/assets/sass/pages/_editorials-detail.scss
+++ b/src/assets/sass/pages/_editorials-detail.scss
@@ -53,6 +53,7 @@
     margin-top: 70px;
 
     &__mixed {
+
       &__image,
       &__text {
         flex: 1;
@@ -69,9 +70,10 @@
       }
 
       &__image {
-        @include media-breakpoint-down(md){
+        @include media-breakpoint-down(md) {
           display: none;
         }
+
         & img {
           max-width: 50%;
           height: auto;
@@ -95,353 +97,110 @@
 
 .editorials-detail__long-image-paragraph {
   padding: 7.5rem;
-  margin-top: 8rem;
+  padding-top: 0 !important;
+  // margin-top: 8rem;
 }
 
 
+.editorials-detail__fifth-section {
+  &__title {
+    z-index: 2;
 
+    &_2 {
+      padding-right: 120px;
+    }
 
-// .editorials-detail__main-section__container {
+    h2 {
+      font-size: 100px;
 
-//   &__text,
-//   &__img {
-//     flex: 1; // Cada hijo ocupará la misma proporción dentro del contenedor
-//     max-width: 50%; // Limita cada hijo al 50% del ancho del contenedor
+      @include media-breakpoint-down(md) {
+        font-size: 55px;
+      }
+    }
+  }
 
-//     @include media-breakpoint-down(md) {
-//       max-width: 100%;
-//     }
-//   }
+  &__image {
+    height: 50%;
+    margin-top: -6rem;
 
-//   &__text {
-//     line-height: 24px;
-//     font-family: "Darker Grotesque", sans-serif;
-//     font-size: 1.3rem;
-//     padding: 1.5rem; // Opcional: espacio interior para el texto
-//     display: flex;
-//     height: 80vh;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: center;
+    &_overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 1rem;
+      color: white;
+      font-size: 1.2rem;
+      width: 22%;
+      text-align: justify;
+      font-family: "Darker Grotesque";
 
-//     p {
-//       max-width: 600px;
-//     }
+    }
+  }
 
-//     h2 {
-//       font-size: 32px;
-//       text-align: right;
-//       line-height: 35px;
-//       font-weight: 500;
-//       margin-bottom: 75px;
-//       max-width: 680px;
-//     }
-//   }
+  &__text {
+    text-indent: 2rem;
+    /* Ajusta el valor según la cantidad de indentación que desees */
+    text-align: justify;
+  }
+}
 
-//   &__img {
-//     overflow: hidden;
+.editorials-detail__ticker {
+  &-container {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+  }
 
-//     img {
-//       width: 100%; // La imagen ocupará el 100% del ancho disponible
-//       height: 100%; // Mantiene la proporción original de la imagen
-//       object-fit: cover;
-//     }
-//   }
-// }
+  &-wrapper {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    overflow: hidden;
 
-// .editorials-detail__main-section__thumbnails {
-//   width: 100%;
-//   margin-top: 3rem;
-//   height: 350px;
+    &--top {
+      top: 110%; // Center vertically
+      left: -10%; // Start slightly off-screen
+      transform: rotate(5deg);
+      animation-direction: normal;
+    }
 
-//   @include media-breakpoint-down(md) {
-//     height: 100%;
-//   }
+    &--bottom{
+        top: 110%;
+        right: -50%; // Start slightly off-screen
+        transform: rotate(-5deg) ;
+        animation-direction: reverse;
+    }
+  }
 
-//   &__text,
-//   &__images {
-//     flex: 1;
-//     max-width: 50%;
+  &-item {
+    display: flex;
+    justify-content: center;
+    white-space: nowrap;
+    animation: move-rtl 6000ms linear infinite;
+    animation-play-state: running;
+    transition: color 0.3s ease;
 
-//     @include media-breakpoint-down(md) {
-//       max-width: 100%;
-//     }
-//   }
+    &--text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: auto;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      overflow: visible;
+    }
+  }
+}
 
-//   &__text {
-//     justify-content: end;
+@keyframes move-rtl {
+  0% {
+    transform: translateX(0);
+  }
 
-//     @include media-breakpoint-down(md) {
-//       justify-content: start;
-//     }
-
-//     &--content {
-//       padding: 1.5rem;
-//       line-height: 24px;
-//       font-family: "Darker Grotesque", sans-serif;
-//       font-size: 1.3rem;
-//       flex: 1;
-//       max-width: 50%;
-//       @include media-breakpoint-down(md) {
-//         max-width: 100%;
-//       }
-//     }
-
-//     & img {
-//       flex: 1;
-//       max-width: 50%;
-//       object-fit: cover;
-//     }
-//   }
-
-//   &__images {
-//     justify-content: space-between;
-
-//     &--content {
-//       flex: 1;
-//       max-width: 50%;
-//       display: flex;
-//       flex-direction: column;
-//       justify-content: end;
-
-//       & p {
-//         line-height: 24px;
-//         font-family: "Darker Grotesque", sans-serif;
-//         font-size: 33px;
-//         text-align: right;
-//         @include media-breakpoint-down(md){
-//           font-size: 23px;
-//         }
-//       }
-//     }
-
-//     img {
-//       flex: 1;
-//       max-width: 48%;
-//       object-fit: cover;
-//     }
-//   }
-// }
-
-// .editorials-detail__sub-section {
-//   &__title {
-//     max-width: 1380px;
-//     font-weight: 500;
-//     font-size: 48px;
-//     line-height: 47px;
-//     position: absolute;
-//     @include media-breakpoint-down(md){
-//       font-size: 28px;
-//       line-height: 30px;
-//     }
-//   }
-
-//   &__container {
-//     margin-top: 70px;
-
-//     &__image,
-//     &__mixed {
-//       flex: 1;
-//       max-width: 50%;
-//     }
-
-//     &__image {
-//       overflow: hidden;
-//       padding-right: 1rem;
-//     }
-
-//     &__mixed {
-//       padding-left: 1rem;
-//       display: flex;
-//       flex-direction: column;
-
-//       &__image,
-//       &__text {
-//         flex: 1;
-//         max-height: 50%;
-//       }
-
-//       &__text {
-//         max-width: 100%;
-//         display: flex;
-//         justify-content: end;
-//         align-items: end;
-
-//         & p {
-//           flex: 1;
-//           max-width: 50%;
-
-//           line-height: 24px;
-//           font-family: "Darker Grotesque", sans-serif;
-//           font-size: 1.3rem;
-//           padding: 0.5rem;
-//         }
-//       }
-
-//       &__image {
-//         display: flex;
-
-//         & img {
-//           max-width: 50%;
-//           height: auto;
-//         }
-//       }
-//     }
-//   }
-// }
-
-// .editorials-detail__end-section__container {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-
-//   & img {
-//     width: 50%;
-//   }
-// }
-
-// .editorials-detail__main-section__long-image {
-//   width: 100%;
-//   margin-top: 8rem;
-// }
-
-// .editorials-detail__long-image-paragraph {
-//   font-family: "Darker Grotesque", sans-serif;
-//   font-size: 1.3rem;
-//   line-height: 24px;
-//   padding: 7.5rem;
-//   margin-top: 8rem;
-
-//   @include media-breakpoint-down(md){
-//     padding: 0;
-//   }
-// }
-
-// .slider {
-//   position: relative;
-//   width: 100vw;
-//   height: 100vh;
-//   overflow: hidden;
-// }
-
-// .slide-container {
-//   position: absolute;
-//   width: 30%;
-//   height: 70%;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   background-color: #000;
-//   cursor: pointer;
-//   will-change: transform, opacity, clip-path;
-//   z-index: 2;
-// }
-
-// .slide-img {
-//   position: absolute;
-//   width: 100%;
-//   height: 100%;
-//   will-change: transform;
-//   overflow: hidden;
-
-// }
-
-// .slide-img img {
-//   transform: scale(1.5);
-//   opacity: 0.75;
-//   will-change: transform;
-//   width: 100%;
-//   height: 100%;
-//   object-fit: cover;
-// }
-
-// .slider-title {
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   width: 50%;
-//   height: 60px;
-//   text-align: center;
-//   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-//   z-index: 10;
-// }
-
-// .slider-title h1 {
-//   position: absolute;
-//   width: 100%;
-//   height: 50px;
-//   text-align: center;
-//   color: #fff;
-//   font-size: 50px;
-//   font-weight: 500;
-// }
-
-// .slider-title h1 span {
-//   position: relative;
-//   display: inline-block;
-//   transform: translateY(50px);
-//   will-change: transform;
-// }
-
-// .slider-counter {
-//   position: absolute;
-//   left: 50%;
-//   transform: translateX(-50%);
-//   bottom: 2.5em;
-//   text-align: center;
-//   z-index: 2;
-// }
-
-// .slider-counter p {
-//   display: flex;
-//   gap: 1em;
-//   justify-content: center;
-//   color: #fff;
-// }
-
-// .slider-items {
-//   position: absolute;
-//   left: 2.5em;
-//   bottom: 2.5em;
-//   z-index: 2;
-// }
-
-// .slider-items p {
-//   transition: 0.5s color;
-// }
-
-// .slider-items p.activeItem {
-//   color: #fff;
-// }
-
-// .slider-preview {
-//   position: absolute;
-//   top: 25%;
-//   left: 50%;
-//   transform: translateX(-50%);
-//   width: 75%;
-//   margin: 0 auto;
-//   height: 100%;
-//   z-index: 0;
-//   opacity: 0.5;
-//   overflow: hidden;
-// }
-
-// .slider-preview img {
-//   position: absolute;
-//   top: 0;
-//   animation: pan 20s infinite linear;
-// }
-
-// @keyframes pan {
-//   0% {
-//     transform: scale(1);
-//   }
-//   50% {
-//     transform: scale(1.25);
-//   }
-//   100% {
-//     transform: scale(1);
-//   }
-// }
+  100% {
+    transform: translateX(-100%);
+  }
+}
