--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -61,3 +61,4 @@ body.purple-theme {
 @import "pages/home-page";
 @import "pages/portfolio-detail";
 @import "pages/editorials-detail";
+@import "pages/game-page";
